--- a/results/results.html
+++ b/results/results.html
@@ -16,10 +16,14 @@
 			<img src="/logo.png" alt="" width="45" height="35" class="d-inline-block align-text-center">
 			CricStats
 		</a>
+		<form class="d-flex">
+			<a id="login" class="btn btn-outline-primary ml-2" type="submit" href="../login.html">Login</a>
+		</form>
 		</div>
 	</nav>
 		<div class=" sidebar">
 			<nav class="nav flex-column align-content-center">
+				<a class="nav-link" id="username" style="color: rgb(36, 4, 32);" href="#"></a>
 				<a class="nav-link" href="/">Home</a>
 				<a class="nav-link" href="../series/series.html">Series</a>
 				<a class="nav-link" href="results.html">Results</a>
@@ -34,7 +38,9 @@
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 	<script src="results.js"></script>
+	<script src="../index.js"></script>
 	<script>
+		setLoginBtn()
 		function time(str){
 			let h = `${Number(str.substr(11,2)) + 5 >= 24 ? Number(str.substr(11,2))-19 : Number(str.substr(11,2)) + 5}`
 
