--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 		}
 
 		function show_alert(username){
-			alert("Welcome back " + username + "\n" + "Press Ok to continue.")
+			window.alert("Welcome back " + username + "\n" + "Press Ok to continue.")
 		}
 		// deleting the cookie
 		// document.cookie = "username=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
