--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					})
 					let data = await res.json()
 					console.log(data.articles)
-					let len = Math.min(50, data.articles.length)
+					let len = Math.min(50, data.articles.length);
 					var ref = document.getElementById('news_cards');
 					for (let i = 0; i<len; i++) {
 						let element = data.articles[i];
@@ -58,16 +58,37 @@
 							<div class="card mb-3 col-md-3 offset-md-1 justify-content-center text-center col-sm-6">
 								<img src="${element.urlToImage}" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title">${element.title}</h5>
+									<h5 class="card-title" id="title${i}">${element.title}</h5>
 									<a href="${element.url}" target="_blank" class="btn btn-primary">View</a>
+									<button type="button" id="speaker${i}">
+										<img src="/speaker.png" width="30" height="30"></img>
+									</button>
 								</div>
 							</div>
 						`);
+					}
+					for (let i = 0; i<len; i++) {
+						let b = document.getElementById(`speaker${i}`)
+						let t = document.getElementById(`title${i}`)
+						b.addEventListener('click', () => {
+									const synth = window.speechSynthesis;
+									var utterThis = new SpeechSynthesisUtterance(t.innerText);
+									synth.speak(utterThis);
+								}
+						)
 					}
 			}catch(err){
 				console.log("Error", err)
 			}
 		}
+
+		const speaker = (title) => {
+			console.log(title)
+			const synth = window.speechSynthesis;
+			var utterThis = new SpeechSynthesisUtterance(title);
+			synth.speak(utterThis);
+		}
+
 	</script>
 </body>
 </html>
